Fixed Clock Alignment

--- a/assets/css/flipclock.css
+++ b/assets/css/flipclock.css
@@ -84,7 +84,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  line-height: 87px;
   text-decoration: none !important;
 }
 
@@ -108,8 +107,7 @@
   width: 100%;
   height: 50%;
   font-size: 80px;
-  overflow: hidden; 
-  outline: 1px solid transparent; }
+  overflow: hidden; }
 
 .flip-clock-wrapper ul li a div .shadow {
   position: absolute;
@@ -142,10 +140,7 @@
   -ms-transform-origin: 50% 0;
   -o-transform-origin: 50% 0;
   transform-origin: 50% 0;
-  bottom: 0;
-  border-bottom-left-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
+  bottom: 0; }
 
 .flip-clock-wrapper ul li a div div.inn {
   position: absolute;
@@ -173,9 +168,9 @@
 .flip-clock-wrapper .flip {   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
 
 .flip-clock-wrapper ul.play li.flip-clock-active {
-  -webkit-animation: asd 0.01s 0.49s linear both;
-  -moz-animation: asd 0.01s 0.49s linear both;
-  animation: asd 0.01s 0.49s linear both;
+  -webkit-animation: asd 0.5s 0.5s linear both;
+  -moz-animation: asd 0.5s 0.5s linear both;
+  animation: asd 0.5s 0.5s linear both;
   z-index: 5; }
 
 .flip-clock-divider {
@@ -221,12 +216,18 @@
   0% {
     z-index: 2; }
 
+  20% {
+    z-index: 4; }
+
   100% {
     z-index: 4; } }
 
 @-moz-keyframes asd {
   0% {
     z-index: 2; }
+
+  20% {
+    z-index: 4; }
 
   100% {
     z-index: 4; } }
@@ -235,12 +236,18 @@
   0% {
     z-index: 2; }
 
+  20% {
+    z-index: 4; }
+
   100% {
     z-index: 4; } }
 
 @keyframes asd {
   0% {
     z-index: 2; }
+
+  20% {
+    z-index: 4; }
 
   100% {
     z-index: 4; } }
@@ -417,3 +424,5 @@
 
   100% {
     opacity: 0; } }
+1
+Downloading1
